--- a/test.html
+++ b/test.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="css/to-do.css" />
 	</head>
 	<body>
+		<a href="#" id="add">add block</a>
 		<div class="gridster">
 			<ul>
 				<li data-row="1" data-col="1" data-sizex="1" data-sizey="1"></li>
@@ -29,13 +30,13 @@
 				<li data-row="3" data-col="5" data-sizex="1" data-sizey="1"></li>
 		
 				<li data-row="1" data-col="6" data-sizex="1" data-sizey="1"></li>
-				<li data-row="2" data-col="6" data-sizex="1" data-sizey="2"></li>
+				<li data-row="2" data-col="6" data-sizex="2" data-sizey="1">what if i type some things here what happens</li>
 			</ul>
 		</div>
 	<script type="text/javascript">
 		$(function(){ //DOM Ready
 
-			$(".gridster ul").gridster({
+			var grid = $(".gridster ul").gridster({
 				widget_margins: [10, 10],
 				widget_base_dimensions: [120, 75],
 				max_size_x: 8,
@@ -44,13 +45,19 @@
 						$(this).text($(this).attr("data-col") + ', ' + $(this).attr("data-row"));
 					});}
 				}
-			});
+			}).data('gridster');
 			
 			$(".gridster ul li").each(function(i) {
 				$(this).text($(this).attr("data-col") + ', ' + $(this).attr("data-row"));
+			});
+			
+			$("#add").click(function() {
+				grid.add_widget('<li class="new">new</li>', 1, 1);
 			});
 			
 		});
 	</script>
 	</body>
 </html>
+
+	
